auth route done

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -17,7 +17,7 @@
   "password": "Mot de passe",
   "forgot_password": "Mot de passe oublié?",
   "confirm_password": "Confirmez le mot de passe",
-  "name": "nom",
+  "name": "Nom",
   "toggle_navigation": "Basculer la navigation",
   "home": "Home",
   "you_are_logged_in": "Vous êtes connecté!",
