--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,6 +3,9 @@
   "cancel": "Cancel",
   "error_alert_title": "Oops...",
   "add_user": "Add User",
+  "edit_user": "Edit User",
+  "update_user": "Updaste User",
+  "role": "Role",
   "users_list": "Users List",
   "error_alert_text": "Something went wrong! Please try again.",
   "token_expired_alert_title": "Session Expired!",
