--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -3,6 +3,9 @@
   "cancel": "Cancelar",
   "error_alert_title": "Ha ocurrido un problema",
   "add_user": "Agregar usuario",
+  "edit_user": "Editar usuario",
+  "update_user": "Actualizar usuario",
+  "role": "Papel",
   "users_list": "Lista de usuarios",
   "error_alert_text": "¡Algo salió mal! Inténtalo de nuevo.",
   "token_expired_alert_title": "!Sesión Expirada!",
