--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -4,6 +4,9 @@
   "error_alert_title": "Oops...",
   "error_alert_text": "Something went wrong! Please try again.",
   "add_user": "Ajouter un utilisateur",
+  "edit_user": "Modifier l'utilisateur",
+  "update_user": "Mettre à jour l'utilisateur",
+  "role": "Rôle",
   "users_list": "Liste des utilisateurs",
   "token_expired_alert_title": "La session a expiré!",
   "token_expired_alert_text": "Veuillez vous reconnecter pour continuer.",
