--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,5 +1,8 @@
 {
   "ok": "Ok",
+  "status": "Statut",
+  "edit": "Éditer",
+  "delete": "Supprimer",
   "cancel": "Annuler",
   "error_alert_title": "Oops...",
   "error_alert_text": "Something went wrong! Please try again.",
@@ -28,6 +31,7 @@
   "send_password_reset_link": "Envoyer le lien de réinitialisation du mot de passe",
   "settings": "Paramètres",
   "profile": "Profil",
+  "users": "Utilisateurs",
   "your_info": "Vos infos",
   "info_updated": "Votre information a été mise à jour!",
   "update": "Mise à jour",
