--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -44,5 +44,6 @@
   "send_verification_link": "Envoyer le lien de vérification",
   "resend_verification_link": "Renvoyer le lien de vérification?",
   "failed_to_verify_email": "Échec de la vérification du courrier électronique.",
+  "email_verified_successfully": "E-mail vérifié avec succès",
   "verify_email_address": "Nous vous avons envoyé un email avec un lien de vérification."
 }
