--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -45,5 +45,5 @@
   "resend_verification_link": "Resend Verification Link ?",
   "failed_to_verify_email": "Failed to verify email.",
   "email_verified_successfully": "Email Verified Successfully",
-  "verify_email_address": "We sent you an email with an the verification link."
+  "verify_email_address": "We sent you an email with the verification link."
 }
