--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -40,6 +40,7 @@
   "new_password": "Nueva Contraseña",
   "login_with": "Iniciar Sesión con",
   "register_with": "Registro con",
+  "remove_image": "Quita la imagen",
   "verify_email": "Verificar correo electrónico",
   "send_verification_link": "Enviar enlace de verificación",
   "resend_verification_link": "¿Reenviar enlace de verificación?",
