--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -40,6 +40,7 @@
   "new_password": "新密码",
   "login_with": "登录",
   "register_with": "注册",
+  "remove_image": "删除图像",
   "verify_email": "检查电子邮件",
   "send_verification_link": "发送验证链接",
   "resend_verification_link": "重新发送验证链接？",
