--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,7 @@
   "edit": "Edit",
   "delete": "Delete",
   "cancel": "Cancel",
+  "close": "Close",
   "error_alert_title": "Oops...",
   "add_user": "Add User",
   "edit_user": "Edit User",
