--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -4,6 +4,7 @@
   "edit": "Editar",
   "delete": "Eliminar",
   "cancel": "Cancelar",
+  "close": "Cerrar",
   "error_alert_title": "Ha ocurrido un problema",
   "add_user": "Agregar usuario",
   "edit_user": "Editar usuario",
