--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -4,8 +4,9 @@
   "edit": "Éditer",
   "delete": "Supprimer",
   "cancel": "Annuler",
+  "close": "Fermer",
   "error_alert_title": "Oops...",
-  "error_alert_text": "Something went wrong! Please try again.",
+  "error_alert_text": "Quelque chose a mal tourné! Veuillez réessayer.",
   "add_user": "Ajouter un utilisateur",
   "edit_user": "Modifier l'utilisateur",
   "update_user": "Mettre à jour l'utilisateur",
