--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -4,6 +4,7 @@
   "edit": "编辑",
   "delete": "删除",
   "cancel": "取消",
+  "close": "关闭",
   "error_alert_title": "错误...",
   "error_alert_text": "遇到一些错误，请稍后重试~",
   "add_user": "添加用户",
