Create Update Columns

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,9 +5,11 @@
   "delete": "Delete",
   "cancel": "Cancel",
   "close": "Close",
+  "city": "City",
   "error_alert_title": "Oops...",
   "add_user": "Add User",
   "edit_user": "Edit User",
+  "export_to_csv": "Export to csv",
   "update_user": "Updaste User",
   "role": "Role",
   "users_list": "Users List",
@@ -31,16 +33,19 @@
   "reset_password": "Reset Password",
   "send_password_reset_link": "Send Password Reset Link",
   "settings": "Settings",
+  "search": "Search",
   "profile": "Profile",
   "users": "Users",
   "your_info": "Your Info",
   "info_updated": "Your info has been updated!",
   "update": "Update",
+  "updated_at": "Updated At",
   "your_password": "Your Password",
   "password_updated": "Your password has been updated!",
   "new_password": "New Password",
   "login_with": "Login with",
   "register_with": "Register with",
+  "region": "Region",
   "remove_image": "Remove Image",
   "verify_email": "Verify Email",
   "send_verification_link": "Send Verification Link",
