--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,9 +5,11 @@
   "delete": "Eliminar",
   "cancel": "Cancelar",
   "close": "Cerrar",
+  "city": "Ciudad",
   "error_alert_title": "Ha ocurrido un problema",
   "add_user": "Agregar usuario",
   "edit_user": "Editar usuario",
+  "export_to_csv": "Exportar a csv",
   "update_user": "Actualizar usuario",
   "role": "Papel",
   "users_list": "Lista de usuarios",
@@ -31,16 +33,19 @@
   "reset_password": "Restablecer la contraseña",
   "send_password_reset_link": "Enviar Enlace de Restablecimiento de Contraseña",
   "settings": "Configuraciones",
+  "search": "Buscar",
   "profile": "Perfil",
   "users": "Los usuarios",
   "your_info": "Tu Información",
   "info_updated": "¡Tu información ha sido actualizada!",
   "update": "Actualizar",
+  "updated_at": "Actualizado en",
   "your_password": "Tu Contraseña",
   "password_updated": "¡Tu contraseña ha sido actualizada!",
   "new_password": "Nueva Contraseña",
   "login_with": "Iniciar Sesión con",
   "register_with": "Registro con",
+  "region": "Región",
   "remove_image": "Quita la imagen",
   "verify_email": "Verificar correo electrónico",
   "send_verification_link": "Enviar enlace de verificación",
