--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -5,10 +5,12 @@
   "delete": "删除",
   "cancel": "取消",
   "close": "关闭",
+  "city": "城市",
   "error_alert_title": "错误...",
   "error_alert_text": "遇到一些错误，请稍后重试~",
   "add_user": "添加用户",
   "edit_user": "编辑使用者",
+  "export_to_csv": "导出到 csv",
   "update_user": "更新用户",
   "role": "角色",
   "users_list": "用户列表",
@@ -31,16 +33,19 @@
   "reset_password": "重置密码",
   "send_password_reset_link": "发送重置链接",
   "settings": "设置",
+  "search": "搜索",
   "profile": "个人设置",
   "users": "用户",
   "your_info": "您的个人信息",
   "info_updated": "您的个人信息已经更改!",
   "update": "更新",
+  "updated_at": "更新于",
   "your_password": "您的密码",
   "password_updated": "您的密码已经更新!",
   "new_password": "新密码",
   "login_with": "登录",
   "register_with": "注册",
+  "region": "地区",
   "remove_image": "删除图像",
   "verify_email": "检查电子邮件",
   "send_verification_link": "发送验证链接",
