--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -5,10 +5,12 @@
   "delete": "Supprimer",
   "cancel": "Annuler",
   "close": "Fermer",
+  "city": "Ville",
   "error_alert_title": "Oops...",
   "error_alert_text": "Quelque chose a mal tourné! Veuillez réessayer.",
   "add_user": "Ajouter un utilisateur",
   "edit_user": "Modifier l'utilisateur",
+  "export_to_csv": "Exporter en csv",
   "update_user": "Mettre à jour l'utilisateur",
   "role": "Rôle",
   "users_list": "Liste des utilisateurs",
@@ -31,16 +33,19 @@
   "reset_password": "réinitialiser le mot de passe",
   "send_password_reset_link": "Envoyer le lien de réinitialisation du mot de passe",
   "settings": "Paramètres",
+  "search": "Chercher",
   "profile": "Profil",
   "users": "Utilisateurs",
   "your_info": "Vos infos",
   "info_updated": "Votre information a été mise à jour!",
   "update": "Mise à jour",
+  "updated_at": "Mis à jour à",
   "your_password": "Votre mot de passe",
   "password_updated": "Votre mot de passe a été mis à jour!",
   "new_password": "nouveau mot de passe",
   "login_with": "Connectez-vous avec",
   "register_with": "Inscrivez-vous avec",
+  "region": "Région",
   "remove_image": "Supprimer l'image",
   "verify_email": "Vérifier le courriel",
   "send_verification_link": "Envoyer le lien de vérification",
