--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,11 +1,13 @@
 {
   "ok": "Ok",
-  "id": "Status",
+  "status": "Status",
   "edit": "Edit",
   "delete": "Delete",
   "cancel": "Cancel",
+  "analytics": "Analytics",
   "close": "Close",
   "city": "City",
+  "country": "Country",
   "error_alert_title": "Oops...",
   "add_user": "Add User",
   "edit_user": "Edit User",
