--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -4,8 +4,10 @@
   "edit": "Editar",
   "delete": "Eliminar",
   "cancel": "Cancelar",
+  "analytics": "Analítica",
   "close": "Cerrar",
   "city": "Ciudad",
+  "country": "País",
   "error_alert_title": "Ha ocurrido un problema",
   "add_user": "Agregar usuario",
   "edit_user": "Editar usuario",
