--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -4,8 +4,10 @@
   "edit": "Éditer",
   "delete": "Supprimer",
   "cancel": "Annuler",
+  "analytics": "Analytique",
   "close": "Fermer",
   "city": "Ville",
+  "country": "Pays",
   "error_alert_title": "Oops...",
   "error_alert_text": "Quelque chose a mal tourné! Veuillez réessayer.",
   "add_user": "Ajouter un utilisateur",
