--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -4,8 +4,10 @@
   "edit": "编辑",
   "delete": "删除",
   "cancel": "取消",
+  "analytics": "分析",
   "close": "关闭",
   "city": "城市",
+  "country": "国家",
   "error_alert_title": "错误...",
   "error_alert_text": "遇到一些错误，请稍后重试~",
   "add_user": "添加用户",
