--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -161,7 +161,7 @@
   "Welcome To The World Classified Marketplace": "Welcome To The World Classified Marketplace",
   "Worldwide": "Worldwide",
   "worldwide_tooltip": "worldwide_tooltip",
-  "you_are_logged_in": "You are logged in!",
+  "you_are_logged_in": "لقد سجلت الدخول!",
   "You don't have any unread notifications.": "You don't have any unread notifications.",
   "Your location is": "Your location is",
   "your_info": "Your Info",
